syntax = "proto3";

package donates;

option go_package = "github.com/go-park-mail-ru/2022_2_VDonate/internal/microservices/donates/protobuf";

import "internal/microservices/users/protobuf/users.proto";

message Donate {
  uint64 id = 1;
  uint64 user_id = 2;
  uint64 author_id = 3;
  uint64 price = 4;
}

message DonateArray {
  repeated Donate donates = 1;
}

message DonateID {
  uint64 id = 1;
}

service Donates {
  rpc SendDonate(Donate) returns(Donate);
  rpc GetDonatesByUserID(user.UserID) returns(DonateArray);
  rpc GetDonateByID(DonateID) returns(Donate);
}